<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/career_info_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/educationName"
        style="@style/NauTextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_education_name_placeholder"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/placeWithDate"
        style="@style/NauTextAppearance.AppCompat.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/profile_education_location_placeholder"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/speciality"
        style="@style/NauTextAppearance.AppCompat.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/profile_education_speciality_placeholder"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />

</LinearLayout>
