<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:src="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background">

            <LinearLayout
                android:id="@+id/toolbarContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/back_icon_color" />

                <TextView
                    android:id="@+id/toolbar"
                    style="@style/NauTextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/security_and_enter"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="@dimen/profile_securty_padding_horizontal"
                app:layout_constraintTop_toBottomOf="@id/toolbarContainer">

                <TextView
                    style="@style/NauTextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_title" />

                <TextView
                    style="@style/NauTextAppearance.AppCompat.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number" />

                <TextView
                    android:id="@+id/mainPhone"
                    style="@style/NauTextAppearance.AppCompat.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_link"
                    src:ignore="InvalidId"
                    tools:text="+ 7 (***) ***-91-19" />

                <TextView
                    style="@style/NauTextAppearance.AppCompat.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/address_email" />

                <TextView
                    android:id="@+id/mainEmailAddress"
                    style="@style/NauTextAppearance.AppCompat.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_link"
                    src:ignore="InvalidId"
                    tools:text="**********7@yandex.ru" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/secondary_text" />

                <TextView
                    style="@style/NauTextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password_title"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/btnChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_link"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/next">

                    <TextView
                        style="@style/NauTextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/change_password_btn"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/secondary_text" />

                <TextView
                    style="@style/NauTextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/actions_title"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/actionExitProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logout" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/NauTextAppearance.AppCompat.SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_from_app_title"
                            android:textColor="@color/red_color_exit" />

                        <TextView
                            style="@style/NauTextAppearance.AppCompat.SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/description_for_app_exit" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deleteAccountContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_trash" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/NauTextAppearance.AppCompat.SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_account_title"
                            android:textColor="@color/red_color_exit" />

                        <TextView
                            style="@style/NauTextAppearance.AppCompat.SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/description_for_remove_account" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

